--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 *{
     margin: 0;
     padding: 0;
-}
+    
 
 body{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height:100vh ;
-    background-color:coral ;
+    min-height:90vh ;
+
+    background-image: url("back_image.jpg");
+    background-size: cover;
+}
 }
 
 .container{
@@ -28,6 +31,7 @@ form select,button,input{
     border: none;
     outline: none;
     border: 0.75rem;
+    border-radius: 10px;
 }
 
 form input{
@@ -71,7 +75,7 @@ form input{
     margin: 2rem 0 2rem 0;
 }
 form button{
-    height: 3rem;
+    height: 2.5rem;
     background-color: #af4d98;
     color: white;
     font-size: 1.5rem;
